# ec1-pipeline-estudiantes

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
procesamiento/: __init__.py  dataset.py  features.py  plots.py
procesamiento/modeling/: predict.py  train.py
reports/: reporte_final.md
src/: imputar.py  reporte.py  resumir.py  transformar.py  validar.py
