[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "procesamiento"
version = "0.0.1"
description = "Pipeline de limpieza, imputaci\u00f3n y transformaci\u00f3n de datos de estudiantes"
authors = [
  { name = "Samuel Fuentes, Pamela Vera" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["procesamiento"]
include = ["pyproject.toml", "procesamiento/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["procesamiento"]
force-sort-within-sections = true

